- Improve code shrinking when using ProGuard.
  - Response/request serialization updated to be better optimized by ProGuard.
- Properly support multidex builds.
  - Response/request objects should no longer always be kept in primary dex.
- Add partial download support through range requests.
- Fix deserialization bug when handling new server responses that were previously void.

---------------------------------------------
2.0.3 (2016-05-07)
- Fix Bad JSON error on ProGuard optimized APKs when deserializing error responses.
  - All 2.0.x versions before 2.0.3 are affected and should be upgraded immediately.
  - Only affects Android apps that enable ProGuard.
  - Affected apps may crash when deserializing an error response from Dropbox servers.

---------------------------------------------
2.0.2 (2016-04-28)
- Update to latest API specs:
  - Authentication
    - Add token/revoke endpoint.
  - Account
    - Add disabled field to Account.
  - Files (DbxUserFilesRequests)
    - Add withIncludeDeleted(Boolean) and withIncludeHasExplicitSharedMembers(Boolean) to GetMetadataBuilder and ListFolderBuilder.
    - Add close argument to uploadSessionStart(..) to explicitly close an upload session.
    - Add uploadSessionAppendV2(..) that provides explicit session close support. uploadSessionAppend(..) is now deprecated.
    - Add copyReferenceGet(..) and copyReferenceSave(..) for copying files and folders.
    - Add getTemporaryLink(..) endpoint.
  - Shared links (DbxUserSharingRequests)
    - Add removeExpiration argument to modifySharedLinkSettings(..).
  - Shared folders
    - Add FolderAction.LEAVE_A_COPY.
    - Add SharedFolderMetadata.getTimeInvited().
    - Add IS_OSX_PACKAGE and INSIDE_OSX_PACKAGE to SharePathError. Returned when a user attempts to share an OS X package or folder inside an OS X package.
  - Business endpoints (DbxTeamTeamRequests)
    - GroupSummary.getMemberCount() is now optional and returns a Long.