@@ -7,6 +7,7 @@
   - Response/request objects should no longer always be kept in primary dex.
 - Add partial download support through range requests.
 - Fix deserialization bug when handling new server responses that were previously void.
+- Fix bug where user locale is ignored for APIv2 requests.
 
 ---------------------------------------------
 2.0.3 (2016-05-07)
